<resources>
    <string name="app_name">码上新闻</string>
    <string name="font_size">字体大小</string>
    <string name="font_color">文字颜色</string>
    <string name="font_spacing">行间距</string>
    <string name="font_none">none</string>
    <string name="font_highlight_color">高亮</string>
    <string name="font_default_text">AaBbCcDd</string>
    <string name="font_style_normal">正文</string>
    <string name="font_style_heading_1">标题 1</string>
    <string name="font_style_heading_2">标题 2</string>
    <string name="font_style_heading_3">标题 3</string>
    <string name="font_insert">插入</string>
    <string name="edit_hyperlink">添加超链接</string>
    <string name="address">网址:</string>
    <string name="text_to_display">文字:</string>
    <string name="ok">完成</string>
    <string name="edit_table">添加表格</string>
    <string name="heading_4">标题 4</string>
    <string name="heading_5">标题 5</string>
    <string name="heading_6">标题 6</string>
    <string name="rows">行数</string>
    <string name="cols">列数</string>
    <string name="title">提示</string>
    <string name="login_username_hint">用户名/手机号</string>
    <string name="username">用户名</string>
    <string name="nickname">昵称</string>
    <string name="login_password_hint">密码</string>
    <string name="regester_sex">性别</string>
    <string name="login_re_input_password">验证密码</string>
    <string name="user_head">头像</string>
    <string name="user_description">简介</string>
    <string name="publish_message">确认发布？</string>
    <string name="del_message">确认删除？</string>
    <string name="publish">发布</string>
    <string name="scan">扫码</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="update">更新</string>
    <string name="double_click">再按一次退出程序</string>
    <string name="get_category_error">获取分类失败</string>
    <string name="server_error">服务器开小差了 请稍后重试</string>
    <string name="network_error">网络错误</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="modify">修改</string>
    <string name="next_step">下一步</string>
    <string name="watch_news_direct">直接看新闻</string>
    <string name="not_input_username">请输入用户名</string>
    <string name="not_input_password">请输入密码</string>
    <string name="not_input_sms_code">请输入验证码</string>
    <string name="not_input_mobile">请输入手机号</string>
    <string name="user_mobile">手机号</string>
    <string name="sms_code">验证码</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="improve_information">完善个人信息</string>
    <string name="password_not_same">两次密码输入不同</string>
    <string name="person_publish">我发布的</string>
    <string name="person_logout">退出登录</string>
    <string name="person_information">个人信息</string>
    <string name="no_more">没有更多</string>
    <string name="scan_notice">将二维码放置在框内，即开始扫描</string>
    <string name="error_code">二维码有误</string>
    <string name="del_success">删除成功</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
