<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="cn.xcloude.qrcodenewsapp.activity.LoginMainActivity">

    <EditText
        android:id="@+id/et_login_name"
        android:layout_width="@dimen/login_width"
        android:layout_height="@dimen/login_height"
        android:layout_above="@+id/et_login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_button_blank"
        android:alpha="0"
        android:hint="@string/login_username_hint"/>
    
    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="@dimen/login_width"
        android:layout_height="@dimen/login_height"
        android:layout_above="@id/tv_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_edit_blank"
        android:alpha="0"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="@dimen/login_width"
        android:layout_height="@dimen/login_height"
        android:layout_above="@+id/tv_register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_button_blank"
        android:alpha="0"
        android:gravity="center"
        android:background="@drawable/shape_login"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/login_text_size" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="@dimen/login_width"
        android:layout_height="@dimen/login_height"
        android:layout_above="@id/tv_none"
        android:layout_centerHorizontal="true"
        android:alpha="0"
        android:gravity="center"
        android:background="@drawable/shape_register"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="@dimen/login_text_size" />

    <TextView
        android:id="@+id/tv_none"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/login_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/login_bottom_blank"
        android:alpha="0"
        android:gravity="center"
        android:layout_alignRight="@+id/tv_register"
        android:text="@string/watch_news_direct"
        android:textColor="@color/blue"
        android:textSize="@dimen/login_text_size"/>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_insert_photo" />

</RelativeLayout>
