<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="cn.xcloude.qrcodenewsapp.activity.RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="@dimen/login_width"
                android:layout_height="@dimen/login_height"
                android:layout_centerHorizontal="true"
                android:hint="@string/user_mobile"
                android:inputType="phone"
                android:layout_above="@+id/ll_sms_code"
                android:layout_marginBottom="@dimen/login_button_blank"/>

            <LinearLayout
                android:id="@+id/ll_sms_code"
                android:layout_width="@dimen/login_width"
                android:layout_height="@dimen/login_height"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/tv_register"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/login_button_blank">

                <EditText
                    android:id="@+id/et_sms_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:hint="@string/sms_code" />

                <TextView
                    android:id="@+id/tv_get_sms_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/get_sms_code"
                    android:layout_margin="6dp"
                    android:background="@drawable/shape_sms_code"
                    android:textSize="@dimen/get_sms_size"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="@dimen/login_width"
                android:layout_height="@dimen/login_height"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/login_button_blank"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/next_step"
                android:background="@drawable/shape_login"
                android:textSize="@dimen/login_text_size"/>

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
