<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="cn.xcloude.qrcodenewsapp.activity.ImproveInformationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/improve_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        
        <LinearLayout
            android:id="@+id/ll_username"
            android:layout_width="@dimen/register_width"
            android:layout_height="@dimen/login_height"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/login_button_blank">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/login_text_size"
                android:text="@string/username" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_margin="5dp"
                android:enabled="false"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_nickname"
            android:layout_width="@dimen/register_width"
            android:layout_height="@dimen/login_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ll_username"
            android:layout_marginTop="@dimen/login_button_blank">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/login_text_size"
                android:text="@string/nickname" />

            <EditText
                android:id="@+id/et_nickname"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_margin="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="@dimen/register_width"
            android:layout_height="@dimen/login_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ll_nickname"
            android:layout_marginTop="@dimen/login_button_blank">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/login_text_size"
                android:text="@string/login_password_hint" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:layout_weight="2"
                android:layout_margin="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll__re_input_password"
            android:layout_width="@dimen/register_width"
            android:layout_height="@dimen/login_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ll_password"
            android:layout_marginTop="@dimen/login_button_blank">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/login_text_size"
                android:text="@string/login_re_input_password" />

            <EditText
                android:id="@+id/et_re_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:layout_weight="2"
                android:layout_margin="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_mobile"
            android:layout_width="@dimen/register_width"
            android:layout_height="@dimen/login_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ll__re_input_password"
            android:layout_marginTop="@dimen/login_button_blank">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/login_text_size"
                android:text="@string/user_mobile" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:enabled="false"
                android:layout_weight="2"
                android:layout_margin="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sex"
            android:layout_width="@dimen/register_width"
            android:layout_height="@dimen/login_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ll_mobile"
            android:layout_marginTop="@dimen/login_button_blank">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/login_text_size"
                android:text="@string/regester_sex" />

            <RadioGroup
                android:id="@+id/rg_sex"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="先生"/>

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="女士"/>

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="保密"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_head"
            android:layout_width="@dimen/register_width"
            android:layout_height="@dimen/login_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ll_sex"
            android:layout_marginTop="@dimen/login_button_blank">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/login_text_size"
                android:text="@string/user_head" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:enabled="false"
                android:layout_weight="2"
                android:layout_margin="5dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="@dimen/login_width"
            android:layout_height="@dimen/login_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ll_head"
            android:layout_marginTop="@dimen/login_button_blank"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/register"
            android:background="@drawable/shape_login"
            android:textSize="@dimen/login_text_size"/>

        
    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>
